--- a/src/pages/quotes/quotes.html
+++ b/src/pages/quotes/quotes.html
@@ -26,8 +26,18 @@
 				<button ion-button 
 				clear 
 				small
-				(click)="onAddToFavorite(quote)">
+				(click)="onAddToFavorites(quote)"
+				*ngIf="!isFavorite(quote)">
 					Favorite
+				</button>
+
+				<button ion-button 
+				clear 
+				small
+				color="danger"
+				(click)="onRemoveFromFavorites(quote)"
+				*ngIf="isFavorite(quote)">
+					Unfavorite
 				</button>
 			</ion-col>
 		</ion-row>
